fix(build): optimize lombok version and javac compiler options